Added Google Font Open Sans Condensed

--- a/react-github-user-card/public/index.html
+++ b/react-github-user-card/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <title>React GitHub User Card</title>
   </head>
   <body>
