Style user card so that graph shows appropriately

--- a/github-usercard/public/index.html
+++ b/github-usercard/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet"
+      href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+      />
     <link rel="stylesheet" href="../src/css/index.css">
     <title>Github User Card</title>
   </head>
