--- a/react-github-user-card/public/index.html
+++ b/react-github-user-card/public/index.html
@@ -28,7 +28,14 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="container">
+    <div class="header">
+      <img src="./assets/lambdalogo.png" alt="Lambda Logo"/>
+      <p>❤️'s</p>
+      <img src="./assets/githublogo.png" alt="GitHub Logo" />
+    </div>
     <div id="root"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
