user cards being displayed

--- a/react-github-user-card/public/index.html
+++ b/react-github-user-card/public/index.html
@@ -26,6 +26,9 @@
     -->
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://use.fontawesome.com/bae05212a1.js"></script>
+
+
     
     <title>React App</title>
   </head>
