--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- css for github-calendar -->
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,5 +46,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Script for github-calendar -->
+    <script
+  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+    </script>
+
+<!-- <script>
+  GitHubCalendar(".calendar", "your-username");
+
+  // or enable responsive functionality:
+  GitHubCalendar(".calendar", "your-username", { responsive: true });
+
+  // Use a proxy
+  GitHubCalendar(".calendar", "your-username", {
+     proxy (username) {
+       return fetch(`https://your-proxy.com/github?user=${username}`)
+     }
+  }).then(r => r.text())
+</script> -->
+
+
   </body>
 </html>
