--- a/user-card/public/index.html
+++ b/user-card/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Space News Digest - Your Source For the Latest is Space Exploration News"
+      content="Tony Miller - Github Space"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Space News Digest - Your Source For the Latest is Space Exploration News</title>
+    <title>Tony Miller Github Space</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
