--- a/github-app/public/index.html
+++ b/github-app/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <script src="https://kit.fontawesome.com/abec310e27.js" crossorigin="anonymous"></script>
     <title>Github Search</title>
   </head>
   <body>
